--- a/lab/cards/index.css
+++ b/lab/cards/index.css
@@ -21,68 +21,72 @@ input {
   box-sizing: border-box;
   outline: none; }
 
-ul.deck > li .card:hover .caption {
-  background-color: #EEE; }
-ul.deck > li .card {
-  width: 252px;
-  height: 270px;
-  margin: 15px;
-  display: block;
-  overflow: hidden;
-  text-align: center;
-  border: 1px solid #E8E6E6;
-  border-radius: 2px; }
-  ul.deck > li .card .picture {
-    height: calc(100% - 60px); }
-    ul.deck > li .card .picture img {
-      height: 100%; }
-  ul.deck > li .card .caption {
-    border-top: 1px solid #E8E6E6;
-    height: 60px; }
-    ul.deck > li .card .caption .title {
+ul.deck {
+  text-align: center; }
+  ul.deck > li {
+    display: inline-block; }
+    ul.deck > li .card:hover .caption {
+      background-color: #EEE; }
+    ul.deck > li .card {
+      width: 252px;
+      height: 270px;
+      margin: 15px;
       display: block;
-      color: #4E4D4D;
-      font-size: 16px;
-      line-height: 30px; }
-    ul.deck > li .card .caption .sub-title {
-      display: block;
-      color: #807E7E;
-      font-size: 13px;
-      line-height: 30px; }
-  ul.deck > li .card .action {
-    position: relative;
-    z-index: 1;
-    top: -77.5px;
-    padding-right: 5px;
-    font-size: 16px; }
-    ul.deck > li .card .action .circle, ul.deck > li .card .action button, ul.deck > li .card .action .ripple {
-      display: block;
-      float: right;
-      clear: both;
-      border-radius: 50%;
-      height: 35px;
-      line-height: 35px;
-      width: 35px; }
-    ul.deck > li .card .action button {
-      box-shadow: 0px 0px 1px white;
-      background-color: #f7c14a;
-      color: white; }
-    ul.deck > li .card .action .ripple {
-      z-index: -1;
-      pointer-events: none;
-      background-color: #FCE5B1;
-      opacity: 0.5;
-      position: relative;
-      top: -35px;
-      transform: scale(0); }
-    ul.deck > li .card .action .ripple.burst {
-      z-index: 1;
-      opacity: 0;
-      -webkit-transition: all 500ms ease-out;
-      -moz-transition: all 500ms ease-out;
-      -o-transition: all 500ms ease-out;
-      transition: all 500ms ease-out;
-      transform: scale(21.02857); }
+      overflow: hidden;
+      text-align: center;
+      border: 1px solid #E8E6E6;
+      border-radius: 2px; }
+      ul.deck > li .card .picture {
+        height: calc(100% - 60px); }
+        ul.deck > li .card .picture img {
+          height: 100%; }
+      ul.deck > li .card .caption {
+        border-top: 1px solid #E8E6E6;
+        height: 60px; }
+        ul.deck > li .card .caption .title {
+          display: block;
+          color: #4E4D4D;
+          font-size: 16px;
+          line-height: 30px; }
+        ul.deck > li .card .caption .sub-title {
+          display: block;
+          color: #807E7E;
+          font-size: 13px;
+          line-height: 30px; }
+      ul.deck > li .card .action {
+        position: relative;
+        z-index: 1;
+        top: -77.5px;
+        padding-right: 5px;
+        font-size: 16px; }
+        ul.deck > li .card .action .circle, ul.deck > li .card .action button, ul.deck > li .card .action .ripple {
+          display: block;
+          float: right;
+          clear: both;
+          border-radius: 50%;
+          height: 35px;
+          line-height: 35px;
+          width: 35px; }
+        ul.deck > li .card .action button {
+          box-shadow: 0px 0px 1px white;
+          background-color: #f7c14a;
+          color: white; }
+        ul.deck > li .card .action .ripple {
+          z-index: -1;
+          pointer-events: none;
+          background-color: #FCE5B1;
+          opacity: 0.5;
+          position: relative;
+          top: -35px;
+          transform: scale(0); }
+        ul.deck > li .card .action .ripple.burst {
+          z-index: 1;
+          opacity: 0;
+          -webkit-transition: all 500ms ease-out;
+          -moz-transition: all 500ms ease-out;
+          -o-transition: all 500ms ease-out;
+          transition: all 500ms ease-out;
+          transform: scale(21.02857); }
 
 ul.undo-list, ul.deck {
   list-style: none;
